--- a/node-express/public/aboutus.html
+++ b/node-express/public/aboutus.html
@@ -5,7 +5,7 @@
     <title>This is aboutus.html</title>
   </head>
   <body>
-    <h1> Index.html </h1>
+    <h1> Aboutus.html </h1>
     <p> This is the contents of aboutus.html file</p>
   </body>
 </html>
